touch up index page

--- a/static/css/cdt.css
+++ b/static/css/cdt.css
@@ -8,6 +8,6 @@
 	background-color: #fff;
 	border-right: 2px solid #ddd;
 	text-align: right;
-	max-width: 100px;
+	width: 175px;
 	vertical-align: middle;
 }
