as of homework9

--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -10,8 +10,8 @@
    <title>{{ page.title }}</title>
 
    <!-- Bootstrap core CSS -->
-   <link href="{{ page.prefix }}static/css/blugold.css" rel="stylesheet">
-   <link href="{{ page.prefix }}static/css/cdt.css" rel="stylesheet">
+   <link href="static/css/blugold.css" rel="stylesheet">
+   <link href="static/css/cdt.css" rel="stylesheet">
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
 
    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
